修复来自1.20的所有报错，还不确认功能能不能用