@@ -2,8 +2,10 @@ package net.onixary.shapeShifterCurseFabric.mixin;
 
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
+import net.minecraft.recipe.RecipeEntry;
 import net.minecraft.recipe.RecipeType;
 import net.minecraft.recipe.SmithingRecipe;
+import net.minecraft.recipe.input.SmithingRecipeInput;
 import net.minecraft.screen.SmithingScreenHandler;
 import net.minecraft.util.math.BlockPos;
 import net.onixary.shapeShifterCurseFabric.recipes.ISmithingRecipeEX;
@@ -19,11 +21,12 @@ public class SmithingScreenHandlerMixin {
     @Inject(method = "onTakeOutput", at = @At(value = "INVOKE", target = "Lnet/minecraft/inventory/CraftingResultInventory;unlockLastRecipe(Lnet/minecraft/entity/player/PlayerEntity;Ljava/util/List;)V", shift = At.Shift.AFTER), cancellable = true)
     public void onTakeOutput(PlayerEntity player, ItemStack stack, CallbackInfo ci) {
         SmithingScreenHandler realThis = (SmithingScreenHandler) (Object) this;
-        List<SmithingRecipe> list = realThis.world.getRecipeManager().getAllMatches(RecipeType.SMITHING, realThis.input, realThis.world);
+        SmithingRecipeInput recipeInput = new SmithingRecipeInput(realThis.input.getStack(0), realThis.input.getStack(1), realThis.input.getStack(2));
+        List<RecipeEntry<SmithingRecipe>> list = realThis.world.getRecipeManager().getAllMatches(RecipeType.SMITHING, recipeInput, realThis.world);
         if (list.isEmpty()) {
             return;
         }
-        SmithingRecipe recipe = list.get(0);
+        SmithingRecipe recipe = list.getFirst().value();
         if (recipe instanceof ISmithingRecipeEX iSmithingRecipeEX) {
             iSmithingRecipeEX.onTakeOutput(realThis, player, stack);
             if (iSmithingRecipeEX.overrideVanillaOnTakeOutput()) {
